@@ -23,23 +23,6 @@
  * @license    see original copyright notice below
  */
 
-//
-//  Copyright (c) 2011, Maths for More S.L. http://www.wiris.com
-//  This file is part of WIRIS Plugin.
-//
-//  WIRIS Plugin is free software: you can redistribute it and/or modify
-//  it under the terms of the GNU General Public License as published by
-//  the Free Software Foundation, either version 3 of the License, or
-//  any later version.
-//
-//  WIRIS Plugin is distributed in the hope that it will be useful,
-//  but WITHOUT ANY WARRANTY; without even the implied warranty of
-//  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-//  GNU General Public License for more details.
-//
-//  You should have received a copy of the GNU General Public License
-//  along with WIRIS Plugin. If not, see <http://www.gnu.org/licenses/>.
-//
 
 
 /**
@@ -51,8 +34,30 @@
 function xmldb_atto_wordimport_uninstall() {
     // Remove 'wordimport' from the toolbar editor_atto config variable.
     $toolbar = get_config('editor_atto', 'toolbar');
-    $toolbar = str_replace(', wordimport', '', $toolbar);
-    $toolbar = str_replace('wordimport, ', '', $toolbar);
-    $toolbar = str_replace('wordimport', '', $toolbar);
-    set_config('toolbar', $toolbar, 'editor_atto');
+    if (strpos($toolbar, 'wordimport') !== false) {
+        $newgroups = array();
+        $groups = explode("\n", $toolbar);
+        foreach ($groups as $group) {
+            if (strpos($group, 'wordimport') !== false) {
+                // Remove the 'wordimport' item from the group.
+                $parts = explode('=', $group);
+                $items = explode(',', $parts[1]);
+                $newitems = array();
+                foreach ($items as $item) {
+                    if (trim($item) != 'wordimport') {
+                        $newitems[] = $item;
+                    }
+                }
+                if (!empty($newitems)) {
+                    $parts[1] = implode(',', $newitems);
+                    $newgroups[] = implode('=', $parts);
+                }
+            }
+            else {
+                $newgroups[] = $group;
+            }
+        }
+        $toolbar = implode("\n", $newgroups);
+        set_config('toolbar', $toolbar, 'editor_atto');
+    }
 }
